examples/negative/silent_contract/handle_missing_return_clause.kai
# Silent contract (#520 audit, category 9 / effects): a
# `handle { ... } with E { ... }` block omits the `return(x)`
# clause that `docs/effects.md` requires. The typer should
# reject (or synthesize a default return); today kaikai
# compiles the block and the runtime path uses a default that
# drops the body's final value silently.
#
# See examples/negative/silent_contract/README.md for follow-up.

effect E { foo() : Int }

fn main() : Int = {
  let r = handle {
    E.foo()
  } with E {
    foo(resume) -> resume(0)
  }
  r
}
